# nit

./: .gitignore  CMakeLists.txt  README.md
src/: CLI.cpp  CLI.h  Commit.cpp  Commit.h  FileSystemAdaptor.h  FileSystemAdaptorImpl.cpp  Index.cpp  Index.h  ObjectStore.cpp  ObjectStore.h  Tree.cpp  Tree.h  Utils.h  hash-object.cpp  hash-object.h  index.h  main.cpp  object-store.h  types.h
test/: CommitTest.cpp  FileSystemAdaptorTest.cpp  IndexTest.cpp  ObjectStoreTest.cpp  TreeTest.cpp  hash_object_test.cpp
test/mocks/: MockFileSystemAdaptor.cpp  MockFileSystemAdaptor.h
test/utils/: TestUtils.h
